service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  labels:
    app: docker-registry
spec:
  ports:
  - port: 5000
    name: docker-registry-service
  clusterIP: None
  selector:
    app: docker-registry
