ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - docker.stage.auroville.org
    secretName: docker-registry-prod-tls
  rules:
  - host: docker.stage.auroville.org
    http:
      paths:
      - backend:
          serviceName: docker-registry-service
          servicePort: 5000
