registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  labels:
    app: docker-registry
spec:
  ports:
  - port: 5000
    name: docker-registry-service
  clusterIP: None
  selector:
    app: docker-registry
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docker-registry
spec:
  serviceName: docker-registry
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2
        ports:
        - containerPort: 5000
          name: docker-registry
        volumeMounts:
        - name: docker-registry
          mountPath: /var/lib/registry
  volumeClaimTemplates:
  - metadata:
      name: docker-registry
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - docker.stage2.auroville.org.in
    secretName: docker-registry-prod-tls
  rules:
  - host: docker.stage2.auroville.org.in
    http:
      paths:
      - backend:
          serviceName: docker-registry-service
          servicePort: 5000
